--- a/page/tabBar/homePages/attendanceDetails/attendanceDetails.wxml
+++ b/page/tabBar/homePages/attendanceDetails/attendanceDetails.wxml
@@ -46,7 +46,7 @@
       <view>{{item.month}}</view>
       <view>{{item.normalNum}}</view>
       <view>{{item.errorNum}}</view>
-      <view>{{item.clasNum}}</view>
+      <view>{{item.classNum}}</view>
     </view>
 
   </view>
