--- a/page/tabBar/minePages/personData/personData.wxml
+++ b/page/tabBar/minePages/personData/personData.wxml
@@ -2,7 +2,7 @@
   <view class='com_list bg_fff header'>
     <view class='display_flex list_tab'>
       <view>身份认证</view>
-      <view class='display_flex com_rigth_view'>
+      <view bindtap='go_authent' class='display_flex com_rigth_view'>
         <text class='color_gray'>李丽</text>
         <text class='yes_view'>已实名</text>
       </view>
@@ -11,8 +11,8 @@
     <view class='display_flex list_tab border_none'>
       <view>文化程度</view>
       <view class='display_flex com_rigth_view'>
-        <text class='color_gray'>本科</text>
-        <text class='fa add_gray fa-chevron-right'></text>
+        <input class='color_gray' placeholder='请输入您的文化程度'></input> 
+        <!-- <text class='fa add_gray fa-chevron-right'></text> -->
       </view>
     </view>
   </view>
@@ -45,16 +45,16 @@
     <view class='display_flex list_tab'>
       <view>主要技能</view>
       <view class='display_flex com_rigth_view'>
-        <text class='color_gray'>某技能</text>
-        <text class='fa add_gray fa-chevron-right'></text>
+        <input class='color_gray' placeholder='请输入您的技能'></input> 
+        <!-- <text class='fa add_gray fa-chevron-right'></text> -->
       </view>
     </view>
 
     <view class='display_flex list_tab'>
       <view>技能等级</view>
       <view class='display_flex com_rigth_view'>
-        <text class='color_gray'>3级</text>
-        <text class='fa add_gray fa-chevron-right'></text>
+        <input class='color_gray' placeholder='请输入您的技能等级'></input> 
+        <!-- <text class='fa add_gray fa-chevron-right'></text> -->
       </view>
     </view>
 
