--- a/page/tabBar/homePages/stayworkload/stayworkload.wxml
+++ b/page/tabBar/homePages/stayworkload/stayworkload.wxml
@@ -4,98 +4,109 @@
   
     <view class='left_box' catchtap='myWage'>
       <text class='{{headerBorder? "addBorder" : "" }}'>我的工作量</text>
-      <view class='news_box {{headerBorder? "addBorder" : "" }}'>
-        <view class='news'>3</view>
+      <view wx:if="{{perDetails.total>0}}" class='news_box {{headerBorder? "addBorder" : "" }}'>
+        <view class='news'>{{perDetails.total}}</view>
       </view>
     </view>
-    <view class='center_border'></view>
-    <view class='right_box' bindtap='youWage'>
+
+    <view wx:if="{{vipNum.isLeader}}" class='center_border'></view>
+
+    <view wx:if="{{vipNum.isLeader}}" class='right_box' bindtap='youWage'>
       <text class='{{!headerBorder? "addBorder" : "" }}'>班组工作量</text>
-      <view class='news_box {{!headerBorder? "addBorder" : "" }}'>
-        <view class='news'>3</view>
+      <view wx:if="{{vipNum.groupSalaryCount>0}}" class='news_box {{!headerBorder? "addBorder" : "" }}'>
+        <view class='news'>{{vipNum.groupSalaryCount}}</view>
       </view>
     </view>
     
   </view>
-
-  <!-- 有工作量的时候 -->
-  <block wx:if="{{vipDetails.t !=''}}">
     <!-- 个人工作量 -->
     <view wx:if="{{headerBorder}}" class='content bg_fff'> 
-      <view bindtap='goDetails' class='com_width list_box'
-        wx:for='{{perDetails.t}}'wx:key="" wx:item="item"
-        data-groupId="{{item.groupId}}">
-        <view class='list'>
-          <text class='list_title'>姓名：</text>
-          <text class='list_data'>{{item.userName}}</text>
+      <block wx:if="{{perDetails.t.length>0}}">
+        <view class='com_width list_box'
+          wx:for='{{perDetails.t}}'wx:key="" wx:item="item">
+          <view bindtap='goDetails' data-groupId="{{item.groupId}}" 
+            data-month="{{item.startDate}}">
+            <view class='list'>
+              <text class='list_title'>姓名：</text>
+              <text class='list_data'>{{item.userName}}</text>
+            </view>
+            <view class='list'>
+              <text class='list_title'>项目名称：</text>
+              <text class='list_data'>{{item.projectName}}</text>
+            </view>
+            <view class='list'>
+              <text class='list_title'>劳务公司：</text>
+              <text class='list_data'>{{item.labourCompanyName}}</text>
+            </view>
+            <view class='list'>
+              <text class='list_title'>班组：</text>
+              <text class='list_data'>{{item.groupName}}</text>
+            </view>
+            <view class='list'>
+              <text class='list_title'>年月：</text>
+              <text class='list_data'>{{item.startDate}}</text>
+            </view>
+            <view class='list'>
+              <text class='list_title'>工作量：</text>
+              <text class='list_data'>{{item.quantity}}</text>
+            </view>
+          </view>
+          <view data-groupId="{{item.groupId}}" bindtap='confirmationTap' 
+            class='com_width confirmation'>
+            确认
+          </view>
         </view>
-        <view class='list'>
-          <text class='list_title'>项目名称：</text>
-          <text class='list_data'>{{item.projectName}}</text>
-        </view>
+      </block>
 
-        <view class='list'>
-          <text class='list_title'>劳务公司：</text>
-          <text class='list_data'>{{item.labourCompanyName}}</text>
-        </view>
-
-        <view class='list'>
-          <text class='list_title'>班组：</text>
-          <text class='list_data'>{{item.groupName}}</text>
-        </view>
-
-        <view class='list'>
-          <text class='list_title'>年月：</text>
-          <text class='list_data'>{{item.startDate}}</text>
-        </view>
-        <view class='list'>
-          <text class='list_title'>工作量：</text>
-          <text class='list_data'>{{item.quantity}}</text>
-        </view>
+      <!-- 无工作量的时候 -->
+      <view wx:else class='list_none'>
+        <image src="/image/none_record.png"></image>
+        <view>您目前无共工资确认记录</view>
       </view>
-      <view bindtap='confirmationTap' class='com_width confirmation'>确认</view>
+      
     </view>
     <!-- 班组工作量 -->
     <block wx:else>
-      <view bindtap='classDetails' class='content bg_fff' 
-        wx:for='{{vipDetails.t}}'wx:key="" wx:item="item" 
-        data-groupid="{{item.groupId}}" data-groupName="{{item.groupName}}"
-        data-titledate="{{item.startDate}}"> 
-        <view class='com_width list_box'>
-          <view class='list'>
-            <text class='list_title'>项目名称：</text>
-            <text class='list_data'>{{item.projectName}}</text>
-          </view>
+      <block wx:if="{{vipDetails.length>0}}">
+        <view bindtap='classDetails' class='content bg_fff' 
+          wx:for='{{vipDetails}}'wx:key="" wx:item="item" 
+          data-groupid="{{item.groupId}}" data-groupName="{{item.groupName}}"
+          data-titledate="{{item.startDate}}"> 
+          <view class='com_width list_box'>
+            <view class='list'>
+              <text class='list_title'>项目名称：</text>
+              <text class='list_data'>{{item.projectName}}</text>
+            </view>
 
-          <view class='list'>
-            <text class='list_title'>劳务公司：</text>
-            <text class='list_data'>{{item.labourCompanyName}}</text>
-          </view>
+            <view class='list'>
+              <text class='list_title'>劳务公司：</text>
+              <text class='list_data'>{{item.labourCompanyName}}</text>
+            </view>
 
-          <view class='list'>
-            <text class='list_title'>班组：</text>
-            <text class='list_data'>{{item.groupName}}</text>
-          </view>
+            <view class='list'>
+              <text class='list_title'>班组：</text>
+              <text class='list_data'>{{item.groupName}}</text>
+            </view>
 
-          <view class='list'>
-            <text class='list_title'>年月：</text>
-            <text class='list_data'>{{item.startDate}}</text>
+            <view class='list'>
+              <text class='list_title'>年月：</text>
+              <text class='list_data'>{{item.startDate}}</text>
+            </view>
+            <view class='list'>
+              <text class='list_title'>工作量：</text>
+              <text class='list_data'>{{item.quantity}}</text>
+            </view>
           </view>
-          <view class='list'>
-            <text class='list_title'>工作量：</text>
-            <text class='list_data'>{{item.quantity}}</text>
-          </view>
+          <view bindtap='confirmationTap' class='com_width confirmation'>确认</view>
         </view>
-        <view bindtap='confirmationTap' class='com_width confirmation'>确认</view>
+      </block>
+      <!-- 无工作量的时候 -->
+      <view wx:else class='list_none'>
+        <image src="/image/none_record.png"></image>
+        <view>您目前无共工资确认记录</view>
       </view>
     </block>
-    
-  </block>
-  <!-- 无工作量的时候 -->
-  <view wx:else class='list_none'>
-    <image src="/image/none_record.png"></image>
-    <view>您目前无共工资确认记录</view>
-  </view>
+  
 
   <!-- 浮层 -->
   <view hidden='{{blockIsShow}}' class='box_block'>
@@ -109,7 +120,7 @@
 
       <view class='btn_box'>
         <view bindtap='no_tap' class='no'>取消</view>
-        <view class='yes'>确认</view>
+        <view bindtap='confirmBtn' class='yes'>确认</view>
       </view>
     </view>
   </view>
