--- a/page/tabBar/homePages/stayworkvipDetails/stayworkvipDetails.wxml
+++ b/page/tabBar/homePages/stayworkvipDetails/stayworkvipDetails.wxml
@@ -26,5 +26,5 @@
     <button>获取验证码</button>
   </view>
 
-  <view class='bg_blue com_width btn'>{{btnFont}}</view>
+  <view bindtap='confirmTap' class='bg_blue com_width btn'>{{btnFont}}</view>
 </view>
