--- a/page/tabBar/minePages/authenticationRes/authenticationRes.wxml
+++ b/page/tabBar/minePages/authenticationRes/authenticationRes.wxml
@@ -1,14 +1,14 @@
-<view class='box'>
+<view wx:if="{{types==1}}" class='box'>
   <view class='content'>
     <icon class='box_icon' type="success" size="70"/> 
     <view class='font_weight'>认证成功</view>
     <view class='color_gray'>身份认证成功，您可以:</view>
   </view>
 
-  <view class='com_footer_btn bg_blue'>返回首页</view>
+  <view bindtap='go_home' class='com_footer_btn bg_blue'>返回首页</view>
 </view>
 
-<view class='box'>
+<view wx:else class='box'>
   <view class='content'>
     <icon class='box_icon' type="warn" size="70"/> 
     <view class='font_weight'>认证失败</view>
