--- a/page/tabBar/login/login.wxml
+++ b/page/tabBar/login/login.wxml
@@ -9,7 +9,16 @@
     </view>
   </view> 
 
-  <button bindgetuserinfo="getCode" open-type="getUserInfo" class='com_width bg_blue'>微信授权登录</button>
+  <button wx:if="{{photoBtn}}" bindgetuserinfo="getCode" open-type="getUserInfo" class='com_width bg_blue'>
+    微信授权
+  </button>
 
-  <!-- <button open-type="getPhoneNumber" bindgetphonenumber="getPhoneNumber">获取手机号</button> -->
+  <!-- <button class='com_width bg_blue' wx:else open-type="getPhoneNumber" bindgetphonenumber="getPhoneNumber">
+    登录
+  </button> -->
+
+  <view wx:else class='com_width bg_fff photo_box'>
+    <input bindblur='getPhone' class='test' placeholder='请输入手机号码'></input>
+    <view bindtap='getPhoneNumber' class='test bg_blue'>登录</view>
+  </view>
 </view>
